Added workSpaceService tests