@@ -3,93 +3,100 @@ package org.example.service.impl;
 import org.example.entity.WorkSpace;
 import org.example.enums.WorkSpaceType;
 import org.example.exceptions.WorkSpaceNotFoundException;
+import org.example.repository.WorkSpaceRepository;
 import org.example.repository.impl.InMemoryWorkSpaceRepository;
 import org.example.service.WorkSpaceService;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 class WorkSpaceServiceImplTest {
 
-    private static InMemoryWorkSpaceRepository mockRepository = mock(InMemoryWorkSpaceRepository.class);
-    private static WorkSpaceService mockService = new WorkSpaceServiceImpl(mockRepository);
+    private WorkSpaceRepository repository;
+    private WorkSpaceService workSpaceService;
 
-    private static WorkSpaceService service = new WorkSpaceServiceImpl(InMemoryWorkSpaceRepository.getInstance());
+
+    @BeforeEach
+    void setUp() {
+        this.repository = mock(InMemoryWorkSpaceRepository.class);
+        this.workSpaceService = new WorkSpaceServiceImpl(repository);
+    }
 
 
     @Test
     void save() {
         // Given
-        Long lastIdInDb = service.findAll().getLast().getId();
         WorkSpaceType type = WorkSpaceType.FLEXIBLE_DESK;
-        Integer price = 100;
-        WorkSpace workSpace = new WorkSpace();
-        workSpace.setId(lastIdInDb + 1);
-        workSpace.setType(type);
-        workSpace.setPrice(price);
+        Integer price = 999;
+        Boolean availability = true;
+        WorkSpace workSpace = new WorkSpace(null, type, price, availability);
+        WorkSpace savedWorkSpace = new WorkSpace(1L, type, price, availability);
+        when(repository.save(workSpace)).thenReturn(savedWorkSpace);
+
         // When
-        service.save(workSpace);
-        WorkSpace savedWorkSpace = service.findAll().getLast();
+        WorkSpace result = workSpaceService.save(workSpace);
+
         // Then
-        assertEquals(savedWorkSpace.getId(), workSpace.getId());
-        assertEquals(savedWorkSpace.getType(), workSpace.getType());
-        assertEquals(savedWorkSpace.getPrice(), workSpace.getPrice());
+        assertAll(
+                () -> assertNotNull(result),
+                () -> assertEquals(savedWorkSpace.getId(), result.getId()),
+                () -> assertEquals(savedWorkSpace.getType(), result.getType()),
+                () -> assertEquals(savedWorkSpace.getPrice(), result.getPrice()),
+                () -> assertEquals(savedWorkSpace.getAvailable(), result.getAvailable())
+        );
     }
 
     @Test
     void removeWorkSpace_happyPath() {
         // Given
-        Long lastIdInDb = service.findAll().getLast().getId();
-        WorkSpace workSpace = new WorkSpace();
-        workSpace.setId(++lastIdInDb);
-        workSpace.setType(WorkSpaceType.FLEXIBLE_DESK);
-        workSpace.setPrice(100);
-        service.save(workSpace);
+        when(repository.findById(anyLong())).thenReturn(Optional.of(new WorkSpace()));
+
         // When
-        service.removeWorkSpace(lastIdInDb);
         // Then
-        assertTrue(service.findById(lastIdInDb).isEmpty());
+        assertDoesNotThrow(() -> workSpaceService.removeWorkSpace(anyLong()));
     }
 
-    @Test
-    void removeWorkSpace_whenIdNotExists() {
+    @ParameterizedTest
+    @ValueSource(longs = {Long.MIN_VALUE, Long.MAX_VALUE})
+    void removeWorkSpace_whenIdNotExists(Long id) {
         // Given
-        Long nonExistentId = Long.MAX_VALUE;
+        when(repository.findById(id)).thenReturn(Optional.empty());
+
         // When
         // Then
         assertThrows(WorkSpaceNotFoundException.class, () -> {
-            service.removeWorkSpace(nonExistentId);
+            workSpaceService.removeWorkSpace(id);
         });
     }
 
     @Test
     void findAll() {
         // Given
-        List<WorkSpace> workSpaces = Arrays.asList(
-                new WorkSpace(),
-                new WorkSpace()
-        );
-        when(mockRepository.findAll()).thenReturn(workSpaces);
+        when(repository.findAll()).thenReturn(List.of());
+
         // When
-        List<WorkSpace> result = mockService.findAll();
         // Then
-        assertEquals(workSpaces.size(), result.size());
+        assertEquals(0, workSpaceService.findAll().size());
     }
 
     @Test
     void findById_happyPath() {
         // Given
-        long id = 999L;
-        WorkSpace mockWorkSpace = mock(WorkSpace.class);
-        when(mockService.findById(id)).thenReturn(Optional.of(mockWorkSpace));
+        Long workingId = 1L;
+        when(repository.findById(workingId)).thenReturn(Optional.of(new WorkSpace()));
+
         // When
-        Optional<WorkSpace> result = mockService.findById(id);
+        Optional<WorkSpace> result = workSpaceService.findById(workingId);
+
         // Then
         assertTrue(result.isPresent());
     }
@@ -97,10 +104,11 @@ class WorkSpaceServiceImplTest {
     @Test
     void findById_whenIdNotExists() {
         // Given
-        long id = Long.MAX_VALUE;
-        when(mockService.findById(id)).thenReturn(Optional.empty());
+        when(repository.findById(anyLong())).thenReturn(Optional.empty());
+
         // When
-        Optional<WorkSpace> result = mockService.findById(id);
+        Optional<WorkSpace> result = workSpaceService.findById(1L);
+
         // Then
         assertTrue(result.isEmpty());
     }
